# autopost-redesign

./: .gitignore
autopost-ururau/: .gitignore  CHANGELOG_v3.6.md  DEPLOY.md  Dockerfile.api  README.md  REDESIGN_NOTES.md  docker-compose.yml  install.bat  package-lock.json  package.json  pyproject.toml  setup.js  test-autoblog.js  test-caption.js  test-generate.js  test-publisher.js  test-runner.js  vercel.json
autopost-ururau/.github/workflows/: apply-editor-patch.yml
autopost-ururau/_reference/ururau-reels-v11/: .env.example  .gitignore  DEPLOY.md  INSTRUCOES.md  README.md  deploy-github.bat  deploy.ps1  install.bat  package-lock.json  package.json
autopost-ururau/_reference/ururau-reels-v11/public/: app.js  index.html  konva-editor.html  konva-editor.js  style.css
autopost-ururau/_reference/ururau-reels-v11/src/: caption.js  db.js  (+8 more)
autopost-ururau/config/: whatsapp-destinations.json
autopost-ururau/output/reports/: fase1-core-report.md  fase2-generator-report.md  fase3-caption-report.md  fase4-publisher-report.md  fase5-autoblog-report.md  fase8-tests-report.md  fase9-deploy-report.md
autopost-ururau/src/dashboard/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
autopost-ururau/src/database/: autopost.db-shm  autopost.db-wal
autopost-ururau/templates/: ururau-reels.default.json  ururau-reels.json
autopost-ururau/tests/e2e/: pipeline.test.js
autopost-ururau/tests/integration/: api.test.js
autopost-ururau/tests/unit/: caption.test.js  collector.test.js  database.test.js  hash.test.js  template-loader.test.js
(+80 files in other folders)
